[gd_scene load_steps=10 format=2]

[ext_resource path="res://data/Shaders/laser.shader" type="Shader" id=1]
[ext_resource path="res://data/Effects/Laser.gd" type="Script" id=2]
[ext_resource path="res://assets/Sounds/Laser.wav" type="AudioStream" id=3]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 1 )
shader_param/intensity = 1.0
shader_param/layers = 8.0
shader_param/speed = 0.5

[sub_resource type="OpenSimplexNoise" id=2]

[sub_resource type="NoiseTexture" id=3]
width = 640
height = 64
seamless = true
noise = SubResource( 2 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 320, 28.2941 )

[sub_resource type="Animation" id=5]
resource_name = "fire"
tracks/0/type = "value"
tracks/0/path = NodePath("CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 4.43828, 1 ),
"update": 1,
"values": [ Color( 1, 1, 1, 0.423529 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 11.3137, 1 ),
"update": 0,
"values": [ Vector2( 1, 0.3 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "retract"
tracks/0/type = "value"
tracks/0/path = NodePath("CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 4.43828 ),
"update": 1,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.423529 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 11.3137 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 0.3 ) ]
}

[node name="Laser" type="Area2D"]
position = Vector2( 240, 528 )
rotation = -1.5708
collision_layer = 8
collision_mask = 17
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="TextureRect" type="TextureRect" parent="."]
material = SubResource( 1 )
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -32.0
margin_right = 640.0
margin_bottom = 32.0
texture = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 320, 0 )
shape = SubResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/fire = SubResource( 5 )
anims/retract = SubResource( 6 )

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
autoplay = true
bus = "SoundFX"
[connection signal="area_entered" from="." to="." method="_on_Laser_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Laser_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
